@@ -1,3 +1,8 @@
+Fri Jan  8 17:07:15 2010  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* io.c (rb_io_s_read): close the IO if an exception is raised on
+	  seeking. [ruby-core:27429]
+
 Fri Jan  8 17:02:45 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	 * ruby.h (RB_GC_GUARD_PTR): workaround for gcc optimization.
